2005-08-10  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: Moved libdfsch specific shared libraries to
	libdfsch_la_LIBADD.

2005-08-06  Ales Hakl  <ales at hakl dot net>

	* src/repl.c: Fixed race condition in SIGINT handling.

2005-08-05  Ales Hakl  <ales at hakl dot net>

	* src/stream.c, src/repl.c: Automatic indenting of interactive
	interpreter prompts

	* src/dfsch.c: Some basic support for features like symbol
	completion
